src/components/panels/sash/sash-panel.scss
@use '../../../colors.scss';

.sash-panel {
	position: absolute;
	width: 80px;
	height: 20px;
	top: 10px;
	right: -20px;
	transform: rotate(45deg);
	background-color: rgba(colors.$ability-default, 0.4);
	border: 1px solid rgba(colors.$ability-default, 0.6);
	color: rgba(colors.$ability-default, 0.9);
	display: flex;
	align-items: center;
	justify-content: center;
	font-size: 8px;
	font-weight: 600;
	text-transform: uppercase;
	text-shadow: 0 0 1px rgb(255, 255, 255);
	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);

	&.type-main {
		background-color: rgba(colors.$ability-main, 0.4);
		border-color: rgba(colors.$ability-main, 0.6);
		color: rgba(colors.$ability-main, 0.9);
	}

	&.type-maneuver {
		background-color: rgba(colors.$ability-maneuver, 0.4);
		border-color: rgba(colors.$ability-maneuver, 0.6);
		color: rgba(colors.$ability-maneuver, 0.9);
	}

	&.type-trigger {
		background-color: rgba(colors.$ability-trigger, 0.4);
		border-color: rgba(colors.$ability-trigger, 0.6);
		color: rgba(colors.$ability-trigger, 0.9);
	}

	&.type-move {
		background-color: rgba(colors.$ability-move, 0.4);
		border-color: rgba(colors.$ability-move, 0.6);
		color: rgba(colors.$ability-move, 0.9);
	}

	&.type-villain {
		background-color: rgba(colors.$ability-villain, 0.4);
		border-color: rgba(colors.$ability-villain, 0.6);
		color: rgba(colors.$ability-villain, 0.9);
	}

	&.type-perform {
		background-color: rgba(colors.$ability-perform, 0.4);
		border-color: rgba(colors.$ability-perform, 0.6);
		color: rgba(colors.$ability-perform, 0.9);
	}
}

